--- a/README.Rmd
+++ b/README.Rmd
@@ -107,45 +107,49 @@ R also creates some intermediate files in the knitting process, which are delete
 
 ## Dealing with files
 
-#### `index.Rmd`
-
-- Be sure to update the YAML header here! Name, date, division, advisor, department, title, output, acknowledgements, dedication, preface. These all need to be customized for your thesis.
-
-- Double check that the files referenced for `bibliography` and `csl` are correct. If you change the citation format or have a differently named file, 
-
-- `lot` and `lof` are "List of tables" and "List of figures" respectively, leave this as true to match the thesis formatting requirements.
-
-- To include extra LaTeX packages, uncomment lines 43-44 and change/add packages as needed.
+### `index.Rmd`
 
 - Your introduction gets written directly into this file, under the "Introduction" header.
 
-#### Adding, subtracting, or renaming chapters
+- Be sure to update the YAML header here! Name, date, division, advisor, department, title, output, acknowledgements, dedication, preface. These all need to be customized for your thesis.
 
-By default, [`_bookdown.yml`](index/_bookdown.yml) handles the chapter ordering. The third line of this file (`rmd_files`) defines which files are combined to create the actual thesis document. You can add a chapter by adding it to the directory and this list, and delete one by removing it from the list.
+- Double check that the files referenced for `bibliography` and `csl` are correct. If you change the citation format or have a differently named file, this needs to be updated.
 
-#### Appendix
+- `lot` and `lof` are "list of tables" and "list of figures" respectively; leave these as true to match the thesis formatting requirements.
+
+- To include extra LaTeX packages, uncomment lines 43-44 and change/add packages as needed.
+
+### Adding, subtracting, or renaming chapters
+
+By default, [`_bookdown.yml`](index/_bookdown.yml) handles the chapter ordering. The third line of this file (`rmd_files`) defines which files are combined to create the actual thesis document. You can add a chapter by adding it to the directory and this list, and delete one by removing it from the list. As long as the list matches what you want to have in your thesis and the correct file names, all should be well.
+
+### Appendix
 
 If you have code in one of the Rmd files that breaks the visual flow of the thesis but should still be included, the appendix is a good place to display this. For an example of how to do this, look at the `include_packages` chunk in [`index.Rmd`](index/index.Rmd) (starting on line 59). To hide this code, the `include = FALSE` option was set. The output of the chunk, if any is produced, will still be displayed.
 
 The code is displayed using the chunk on line 16 of [`05-appendix.Rmd`](index/05-appendix.Rmd). It uses the name of the original chunk to duplicate it here, then sets `results = 'hide'` to only show the code and hide the output.
 
-#### Abstract and prelim
+### Abstract and prelim
+
+You may notice that two of the included files are [`00-abstract.Rmd`](index/00-abstract.Rmd) and [`00--prelim.Rmd`](index/00--prelim.Rmd) (for acknowledgements, preface, and dedication), but these sections are duplicated in the YAML of `index.Rmd`. This doubling is mostly an artifact of an attempted edit to the template that was never quite finished.
+
+You can add your abstract directly to the `00-abstract.Rmd` file, and line 23 of `index.Rmd` will automatically include it in the document. For acknowledgements, dedication, and preface, yo should write directly into the YAML of `index.Rmd` (I wasn't able to figure out how to add the file like the abstract).
 
 ## Object referencing
 
-#### In-line code
+### In-line code
 
-#### Tables and figures
+### Tables and figures
 
-#### Sections
+### Sections
 
-#### Chunks?
+### Chunks?
 
-#### Citations
+### Citations
 
 ## Extra fun tidbits
 
-#### File path issues
+### File path issues
 
 R Markdown has some non-intuitive behaviors when it comes to relative file names. A typical structure in R repositories is the Project (big P), which is meant to be a self-contained folder containing everything needed for a project (small p) you're working on. The working directory is generally set to the root of the Project, so relative file names are indexed to this location. When you knit an R Markdown document, however, it temporarily sets the parent directory of the Rmd file to be the working directory. This can mess up any relative file paths which ran fine in lin-by-line code tests (indexed to the Project), but are now breaking your knit (indexed to the Rmd file).
 
@@ -161,15 +165,15 @@ Possible fixes:
 
 - Use full absolute file paths all the time. Bad because of the same directory change as above (also gets tedious).
 
-#### YAML formatting
+### YAML formatting
 
 YAML ("Yet Another Markup Language", or "YAML Ain't Markup Language") is a protocol for defining the metadata for a document: title, author, output format, whether there should be a table of contents, etc.
 
-#### Why does it have to be named `index`?
+### Why does it have to be named `index`?
 
 One of the formats you can knit your thesis to is GitBook, which is built on top of some HTML. This format is a webpage, so the "home" of the page needs to be called `index`. If you're only knitting to pdf, you can maybe change this, but it's best to leave it as is just in case...
 
-#### Underscore issues
+### Underscore issues
 
 A problem: R people really like underscores to separate words in object names (dots represent something else), but LaTeX doesn't like underscores (they're a special character, so displaying them verbatim is tricky sometimes). It's hard to anticipate every case where this is an issue, but the [`xtable` package](https://cran.r-project.org/web/packages/xtable/vignettes/xtableGallery.pdf) is a good option for displaying a table that has underscores in column names or data.
 
